<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InputScreen" >

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/dateFormatHint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dateEditText"
        android:layout_below="@+id/dateEditText"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/taskDescriptionHint" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/descriptionEditText"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/normalRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/normal_task" />

        <RadioButton
            android:id="@+id/urgentRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgent_task" />
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="42dp"
        android:onClick="sendMessage"
        android:text="@string/submit" />

</RelativeLayout>